Fix IntegrationTest Step 4

--- a/adoc/4.adoc
+++ b/adoc/4.adoc
@@ -83,8 +83,7 @@ Mit `@Autowired` fordern wir ein Objekt dieser Klasse bei Spring an - weiteres d
 <5> Mit der MockMVC-Instanz können wir jetzt Requests ausführen. In diesem Fall ein GET auf `/`, das gleiche, was ein Browser beim Aufrufen der Seite machen würde.
 <6> Wir erwarten, dass der Status (=das Ergebnis in Form eines https://de.wikipedia.org/wiki/HTTP-Statuscode[Codes]) der Anfrage OK ist
 <7> außerdem soll das Ergebniss vom Typ HTML sein
-<8> und der Seiten-Text soll die Titel der beiden im Controller erstellten Artikel enthalten
-
+<8> und die Seite sollte die passende Überschrift enthalten
 
 ==== Ausführen der Tests
 
