--- a/adoc/2.adoc
+++ b/adoc/2.adoc
@@ -12,10 +12,11 @@
 include::../javasrc/1/src/main/java/tdpe/example/ExampleApplication.java[tags=class]
 ----
 
-<1> Gibt an, das dieses Projekt eine Spring Boot-Application ist
- Dies aktiviert u.a. Auto-Configuration (Jede im Projekt gefundene Konfiguration wird angewandt) und Component-Scan (Alle im Projekt gefundenen Services werden als Beans bereitgestellt)
+<1> Gibt an, dass dieses Projekt eine Spring-Boot-Application ist.
+ Dies aktiviert u.a. Auto-Configuration (Jede im Projekt gefundene Konfiguration wird angewandt)
+ und Component-Scan (Alle im Projekt gefundenen Services werden als Beans bereitgestellt)
 
-<2> Zusätzlich wird in der `main` die Klasse an Spring zum Starten übergeben, ähnlich, wie zB mit JavaFX
+<2> Zusätzlich wird in der `main` die Klasse an Spring zum Starten übergeben, ähnlich, wie z.B. mit JavaFX
 
 === Controller
 
