--- a/adoc/6.adoc
+++ b/adoc/6.adoc
@@ -22,3 +22,134 @@ include::../javasrc/6/pom.xml[tags=db]
 <2> H2 ist eine einfache Embedded-Datenbank, die ohne weitere Einrichtung funktioniert.
 
 
+=== Datenmodell anpassen
+
+Damit die Klassen in einer Datenbank speicherbar sind,
+müssen diese mit entsprechenden JPA-Annotationen annotiert werden.
+
+[NOTE]
+====
+JPA ist die **J**ava **P**ersistance **A**pi TODO
+====
+
+
+[source,java]
+.Article.java
+----
+include::../javasrc/6/src/main/java/tdpe/example/domain/Article.java[tags=jpa]
+----
+<1> Die Klasse ist eine Entität -sie entspricht einer Tabelle in der Datenbank
+
+<2> Jeder Entität braucht eine ID, einen eindeutigen Identifier.
+Ein Artikel hat im Datenmodell bisher keinen einzigartigen Wert, wir führen deshalb eine "künstliche" ID ein.
+Dieses ist einfach ein `Long`, welcher Autogeneriert werden soll
+
+<3> `author` muss als Assoziation gekennzeichnet werden.
+`ManyToOne` gibt dabei an, dass viele Artikel zu einem User gehören
+
+<4> `title` ist ein einfacher Wert und entspricht deshalb in der Datenbank einer Spalte,  wird deshalb als Column gekennzeichnet
+
+<5> `text` ist auch eine `Column`, zusätzlich aber auch ein `Lob`, welches beliebig große Texte erlaubt
+(`Column` ist Standardmäßig 255 Zeichen lang, lässt sich aber auf einen höheren Wert festlegen)
+
+<6> `publishedAt` ist wieder ein einfacher Wert, deshalb wieder `Column`
+
+<7> `comments` ist wieder eine Assoziation, ein Artikel kann dabei mehrere Kommentare enthalten, weshalb es `OneToMany` ist
+
+<8> Jede Entität braucht einen parameterlosen Konstruktor. Dieserr kann `protected` sein, damit man ihn nicht versehentlich benutzt
+
+[source,java]
+.Comment.java
+----
+include::../javasrc/6/src/main/java/tdpe/example/domain/Comment.java[tags=jpa]
+----
+<1> Die Klasse ist wieder eine Entität
+
+<2> Sie braucht wieder eine ID
+
+<3> `text` soll wieder ein beliebig großer Text sein
+
+<4> `writtenAt` ist wieder ein einfacher Wert
+
+<5> Die Entität braucht wieder einen Default-Konstruktor
+
+
+[source,java]
+.User.java
+----
+include::../javasrc/6/src/main/java/tdpe/example/domain/User.java[tags=jpa]
+----
+<1> Die Klasse ist wieder eine Entität
+
+<2> Nutzer haben einen eindeutigen Nutzernamen -
+dieser kann als ID für die Datenbank genutzt werden
+
+<3> Vor und Nachname sind wieder einfache Werte
+
+<4> Die Entität braucht wieder einen Default-Konstruktor
+
+
+=== Repository
+
+Die Interaktion mit der Datenbank findet über ein Repository statt.
+
+Für dieses muss nur ein Interface angelegt werden, Spring legt dann im Hintergrund eine entsprechende Implementation an und stellt diese bereit.
+
+Wir können dazu einfach das schon bestehede Interface `CrudRepository` erweitern:
+
+[source, java]
+.ArticleRepository.java
+----
+include::../javasrc/6/src/main/java/tdpe/example/domain/ArticleRepository.java[tags=class]
+----
+
+CrudRepository stellt dabei Methoden zum Erstellen (Create), Lesen (Read), Updaten (Update) und Löschen (Delete) von Datensätzen bereit.
+Angeben müssen wir nur den Typ der Entität (`Article`) und der Id (`Long`).
+
+
+=== Aktivieren
+
+Damit die Datenbank benutzt werden kann, müssen wir diese noch aktivieren:
+
+[source, java]
+.ExampleApplication.java
+----
+include::../javasrc/6/src/main/java/tdpe/example/ExampleApplication.java[tags=class]
+----
+
+<1> Hiermit wird das erkennen von Repositorys aktiviert
+
+<2> Hiermit wird die Unterstützung für Transaktionen aktiviert.
+Methoden können damit mit `@Transcational` annotiert werden,
+sodass alle darin stattfindenden Datenbankzugriffe in einer Transaktion stattfinden
+
+
+=== Repository nutzen
+
+Das Repository können wir jetzt in `BlogServiceImpl` nutzen, um die Artikel aus der Datenbank zu laden:
+
+[source, java]
+.BlogServiceImpl.java
+----
+include::../javasrc/6/src/main/java/tdpe/example/domain/BlogServiceImpl.java[tags=class]
+----
+
+<1> Der Konstuktor hat als Argument ein `ArticleRepository` und Spring wird mit `Autowired` angewiesen, ein ensprechendes Objekt zu übergeben
+
+<2> Aus dem `ArticleRepository` werden dann die Artikel geladen, der Liste hinzugefügt und diese dann zurückgegeben
+
+=== Beispieldaten
+
+Damit beim Testen auch Daten vorhanden sind, wäre es schön wenn die Anwendung beim Start die Datenbank erstmal mit ein paar Beispiel-Artikeln befüllt wird.
+Dazu wird eine Datei data.sql im Verzeichnis src/main/resources erstellt:
+
+
+[source, sql]
+.BlogServiceImpl.java
+----
+include::../javasrc/6/src/main/resources/data.sql[tags=]
+----
+
+=== Starten
+
+Wir können die ANwendung wieder ausführen (`./mnvw spring-boot:run`)
