Add Step 7, Security

--- a/adoc/index.adoc
+++ b/adoc/index.adoc
@@ -27,8 +27,11 @@ include::5.adoc[]
 
 //Datenbank
 include::6.adoc[]
+// 15 min
 
 // Sicherheit
+include::7_security.adoc[]
+
 
 // Artikel anlegen
 
