--- a/adoc/7_security.adoc
+++ b/adoc/7_security.adoc
@@ -32,8 +32,10 @@ include::../javasrc/7/src/main/java/tdpe/example/domain/User.java[tags=class]
 
 <3> Außerdem brauchen sie eine Liste von Rollen, diese können einfach als String
 (im Format `ROLE_USER`) gespeichert werden.
-Die Liste enthält nur einfache Datentypen, man kann sie deshlab mit
-`EementCollection` annotieren, damit sie passend in der Datenbank gespeichert werden
+Die Liste enthält nur einfache Datentypen, man kann sie deshalb mit
+`EementCollection` annotieren, damit sie passend in der Datenbank gespeichert werden.
+Zusätzlich geben wir als Fetch-Type `EAGER` an, damit die Nutzerrollen beim Laden eines
+Nutzers immer geladen werden
 
 <4> Den Konstruktor passen wir an, damit ihm auch das Passwort übergeben wird
 
