--- a/adoc/8_add_articles.adoc
+++ b/adoc/8_add_articles.adoc
@@ -85,6 +85,10 @@ einen POST statt GET-Request durchführt
 <2> Die Form enthält zwei input-Felder. Diese referenzieren mit `th:field` und `*{}` jeweils
 das zugehörige Feld aus dem hinterlegtem Model - `*{titel}` z.B. `createArticleCmd.title`
 
+[NOTE]
+====
+URLS verweisen jeweils auf ein Mapping, nicht auf die template-Dateien.
+====
 
 In der blog.html legen wir außerdem noch einen Link auf die neue Seite an:
 
