--- a/adoc/6.adoc
+++ b/adoc/6.adoc
@@ -120,7 +120,7 @@ include::../javasrc/6/src/main/java/tdpe/example/ExampleApplication.java[tags=cl
 <1> Hiermit wird das Erkennen von Repositorys aktiviert
 
 <2> Hiermit wird die Unterstützung für Transaktionen aktiviert.
-Methoden können damit mit `@Transcational` annotiert werden,
+Methoden können damit mit `@Transactional` annotiert werden,
 sodass alle darin stattfindenden Datenbankzugriffe in einer Transaktion stattfinden
 
 
@@ -136,6 +136,7 @@ include::../javasrc/6/src/main/java/tdpe/example/domain/BlogServiceImpl.java[tag
 
 <1> Der Konstuktor hat als Argument ein `ArticleRepository` und Spring wird mit `Autowired` angewiesen, ein ensprechendes Objekt zu übergeben
 
+<2> Aus dem `ArticleRepository` werden dann die Artikel geladen, der Liste hinzugefügt und diese dann zurückgegeben
 <2> Aus dem `ArticleRepository` werden dann die Artikel geladen, der Liste hinzugefügt und diese dann zurückgegeben
 
 === Beispieldaten
