--- a/adoc/index.adoc
+++ b/adoc/index.adoc
@@ -38,11 +38,14 @@ include::8_add_articles.adoc[]
 // Datenbank persistieren
 include::9_persist_database.adoc[]
 
+// Form Validation
+include::10_form_validation.adoc[]
+
 // einzelne Artikel anzeigen
+
 
 // Kommentare anlegen
 
-// Form Validation
 
 
 include::links.adoc[]
