--- a/adoc/12_add_comment.adoc
+++ b/adoc/12_add_comment.adoc
@@ -119,4 +119,4 @@ Außerdem referenzieren wir wieder das Command-Object
 === Starten
 
 Wenn wie die Anwendung starten, und einen einzelnen Artikel (z.B. http://localhost:8080/articles/1)
-anzeigen lassen, können wir diesem Kommentare hinzufügen
+anzeigen lassen, können wir diesem Kommentare hinzufügen.
