--- a/adoc/9_persist_database.adoc
+++ b/adoc/9_persist_database.adoc
@@ -83,7 +83,7 @@ include::../javasrc/9/src/main/resources/application.properties[tags=db]
 Der Pfad gibt dabei an, dass es eine `jdbc`-Datenbank vom Typ `h2` ist, die als Datei vorliegt
 
 <2> Zusätzlich setzen wir noch die `ddl-auto`-Propertie auf `update`.
-Dadurch wir die Datenbank beim starten de Anwendnung an das aktuelle Schema angepasst.
+Dadurch wir die Datenbank beim Starten der Anwendung an das aktuelle Schema angepasst.
 Normalerweise steht dies auf `create-drop`, damit würde die Anwendung be jedem Starten neu erstellt und beim Beenden gelöscht (`drop`) werden
 
 === Starten
