--- a/adoc/10_form_validation.adoc
+++ b/adoc/10_form_validation.adoc
@@ -2,7 +2,7 @@
 
 Momentan ist es möglich, das Formular zum Erstellen eines neuen Blogeintrags leer abzusenden. In diesem Fall wird auch tatsächlich ein leerer Eintrag erstellt und taucht danach auf der Startseite auf.
 
-Schöner wäre es natürlich, wenn der Autor darauf hingewiesen würde dass alle Formularfelder ausgefüllt sein müssen und ein unvollständig ausgefülltes Formular niemals in der Datenbank landen kann.
+Schöner wäre es natürlich, wenn der Autor darauf hingewiesen würde, dass alle Formularfelder ausgefüllt sein müssen und ein unvollständig ausgefülltes Formular niemals in der Datenbank landen kann.
 
 Hierfür wird Bean Validation verwendet. Dabei handelt es sich um einen Java EE-Standard, der z.B. vom Hibernate-Projekt implementiert wird.
 
